# ainotesapp

./: .dockerignore  .env.example  .gitignore  BUILD_PROCESS_TEST_RESULTS.md  BUILD_TEST_RESULTS.md  BUILD_TEST_SUMMARY.md  CHANGELOG.md  DOCKER_IMPLEMENTATION_COMPLETE.md  DOCKER_SETUP_GUIDE.md  Dockerfile  ELECTRON_APP_COMPLETE.md  FINAL_BUILD_TEST_REPORT.md  FINAL_PRODUCTION_ASSESSMENT.md  FINAL_PRODUCTION_ASSESSMENT_COMPLETE.md  FINAL_VERIFICATION_CHECKLIST.md  FIXES_APPLIED.md  Final_Notes.md  INSTALLATION_GUIDE.md  INSTALL_SYSTEM_DEPENDENCIES.sh  LICENSE  PHASE1_COMPLETION_REPORT.md  PHASE1_SYSTEM_DEPENDENCIES.md  PHASE1_TODO.md  PHASE2_COMPLETION_REPORT.md  PHASE2_TODO.md  PRIVACY.md  PRODUCTION_FIXES_COMPLETED.md  PRODUCTION_FIX_PLAN.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READY_COMPLETE.md  PRODUCTION_READY_FINAL.md  PRODUCTION_ROADMAP.md  PRODUCTION_SUMMARY.md  QUICKSTART.md  QUICK_BUILD_GUIDE.md  QUICK_FIX_CHECKLIST.md  README.md  RUNTIME_TEST_REPORT.md  SECURITY.md  SNAP_CONFLICT_RESOLUTION.md  (+19 more)
electron/: main.js  preload.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AINotesApp.jsx
src/components/ui/: button.jsx  card.jsx  textarea.jsx
